Test in result rate aligned, API fixed

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ body {
 
 .rate, .rateNoData, .symbolName {
   font-family: Georgia, 'Times New Roman', Times, serif;
+  text-align: center;
 }
 
 
